# trip-splitter

./: CLAUDE.md
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/routers/: exchange.py  ocr.py  settlements.py
backend/app/services/: exchange.py  ocr.py  settlement.py
backend/tests/: conftest.py  test_api_routers.py  test_balance_calculation.py  test_exchange.py  test_ocr.py  test_settlement.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AddParticipantModal.tsx  AssignmentChips.tsx  AvatarUpload.tsx  EditParticipantModal.tsx  Layout.tsx  LineItemCard.tsx  MultiPayerPicker.tsx  ParticipantPicker.tsx  RecordPaymentModal.tsx  Spinner.tsx  SplitEditor.tsx
frontend/src/lib/: api.ts  calculations.ts
frontend/src/lib/__tests__/: api.test.ts  calculations.test.ts
frontend/src/pages/: AddManualExpense.tsx  AddReceipt.tsx  CreateTrip.tsx  Home.tsx  ReceiptDetail.tsx  ReceiptList.tsx  Settlements.tsx  TripDashboard.tsx
supabase/migrations/: 001_initial_schema.sql  002_multi_payer_support.sql
